# perf-keeper

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
perf_keeper/: agent.py  cli.py  config.py  prow_utils.py  server.py  state.py  watcher.py
perf_keeper/tools/: artifact.py  github_pr.py  openshift_release.py  workload_metadata.py
skills/: final-report.md  orion-analysis.md  other-analysis.md
