[project]
name = "perf-keeper"
version = "0.1.0"
description = "AI agent for diagnosing OpenShift Perf & Scale regressions"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pyyaml>=6.0",
]

[project.scripts]
perf-keeper = "perf_keeper.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["perf_keeper*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
